samples/_failures_safe/1761505822_fc4e36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab53bcdc.c: In function ‘main’:
./samples/SAFE/__tmp_ab53bcdc.c:178: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ab53bcdc.c:177:13: error: expected declaration or statement at end of input
  177 |             if
      |             ^~
./samples/SAFE/__tmp_ab53bcdc.c:177:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab53bcdc.c:177:13: error: expected declaration or statement at end of input
